# dependabot-uv-example

./: Makefile  README.md  pyproject.toml
.github/: dependabot.yml
requirements/: ci.in  ci.txt  dev.in  dev.txt  prod.in  prod.txt
