[project]
name = "dependabot-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.38.43",
    "cachetools==6.2.0",
    "celery-types>=0.20.0",
    "celery[redis]==5.3.6",
    "cryptography==42.0.4",
    "django==4.2.14",
    "sentry-sdk[django]==2.32.0",
    "types-requests==2.31.0.20240106",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==4.4.6",
    "pip>=24.3,<25.1",
    "pip-tools==7.3.0",
    "pipgrip>=0.10.14",
    "pylint==3.2.6",
    "pylint-django==2.5.5",
    "ruff==0.5.6",
    "uv==0.2.33",
]